applauncherd (2.0.0) unstable; urgency=low

  * Fixes: #274302 - don't unload the main binary

 -- Alexey Shilov <alexey.shilov@nokia.com>  Thu, 18 Aug 2011 15:43:02 +0300

applauncherd (1.0.9) stable; urgency=low

  * Changes: Improve test debug output.
  * Fixes: NB#277092 - With Applauncher Gallery process does not release ~10 MB dirty memory when in background

 -- Nimika Keshri <nimika.1.keshri@nokia.com>  Thu, 1 Sep 2011 10:30:06 +0300

applauncherd (1.0.8) stable; urgency=low

  * Fixes: NB#263622 - [TASK] applauncherd-launcher should depend on libmeegotouchpreloader0

 -- Pertti Kellomaki <pertti.kellomaki@nokia.com>  Wed, 31 Aug 2011 09:32:28 +0300

applauncherd (1.0.7) stable; urgency=low

  * Changes: Unwanted testapp fala_windowless removed from the CMake file

 -- Nimika Keshri <nimika.1.keshri@nokia.com>  Thu, 25 Aug 2011 15:06:28 +0300

applauncherd (1.0.6) stable; urgency=low

  * Fixes: NB#269073 - Precached (QML) applications do not set WM_CLASS window atom properly
  * Changes: Added functional tests for WM_CLASS

 -- Nimika Keshri <nimika.1.keshri@nokia.com>  Mon, 22 Aug 2011 11:22:42 +0300

applauncherd (1.0.5) stable; urgency=low

  * Fixes: NB#276265 - After SSU with build version 20.2011.32-0.REQ.759009, applications running in the background and foreground are crashing
  * Changes: XB-Maemo-CI-Packages for art-tests changed from applauncherd to applauncherd-launcher and applauncherd-invoker

 -- Dmitry Rozenshtein <ext-dmitry.2.rozenshtein@nokia.com>  Tue, 19 Aug 2011 13:23:55 +0300

applauncherd (1.0.4) stable; urgency=low

  * Fixes: NB#276265 - After SSU with build version 20.2011.32-0.REQ.759009, applications running in the background and foreground are crashing

 -- Alexey Shilov <alexey.shilov@nokia.com>  Mon, 15 Aug 2011 11:30:49 +0300

applauncherd (1.0.3) stable; urgency=low

  * Fixes: NB#273378 - Boosters should restore original signal handlers modified by applauncherd
